tests/parsing/invalid/invalid_instance_name_anonymous_instantiation/bus.fbd
type my_bus bus
	mask config
